--- a/MeMe/Base.lproj/Main.storyboard
+++ b/MeMe/Base.lproj/Main.storyboard
@@ -1,23 +1,72 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="BLY-2h-p0Y">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="SFf-L1-kEj">
+                                        <connections>
+                                            <action selector="camera:" destination="BYZ-38-t0r" id="nqf-qr-i7C"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="C6k-Cc-rYm"/>
+                                    <barButtonItem title="Album" id="ueR-dj-cXL">
+                                        <connections>
+                                            <action selector="album:" destination="BYZ-38-t0r" id="XxI-ie-fHC"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="doE-BT-xNg">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="action" id="sRf-1N-y8a"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qKD-Zv-rWF"/>
+                                    <barButtonItem systemItem="cancel" id="zLC-aW-G9f"/>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-rJ-0Ux">
+                                <rect key="frame" x="0.0" y="44" width="320" height="480"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="BLY-2h-p0Y" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GUM-Ko-nx4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BLY-2h-p0Y" secondAttribute="bottom" id="IqY-Nd-sh0"/>
+                            <constraint firstItem="Jvj-rJ-0Ux" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NKY-pP-ZNl"/>
+                            <constraint firstAttribute="trailing" secondItem="doE-BT-xNg" secondAttribute="trailing" id="SEt-H4-Haa"/>
+                            <constraint firstItem="doE-BT-xNg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Y14-DR-32q"/>
+                            <constraint firstItem="Jvj-rJ-0Ux" firstAttribute="top" secondItem="doE-BT-xNg" secondAttribute="bottom" id="YzE-iQ-QSr"/>
+                            <constraint firstItem="doE-BT-xNg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aMF-cl-jc5"/>
+                            <constraint firstItem="BLY-2h-p0Y" firstAttribute="top" secondItem="Jvj-rJ-0Ux" secondAttribute="bottom" id="fzS-XP-7Pq"/>
+                            <constraint firstAttribute="trailing" secondItem="Jvj-rJ-0Ux" secondAttribute="trailing" id="gct-JD-K1u"/>
+                            <constraint firstAttribute="trailing" secondItem="BLY-2h-p0Y" secondAttribute="trailing" id="u8m-Xd-Ghi"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cameraButton" destination="SFf-L1-kEj" id="PIy-AX-tJH"/>
+                        <outlet property="imageView" destination="Jvj-rJ-0Ux" id="1cv-O0-6YB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
