--- a/MeMe/Base.lproj/Main.storyboard
+++ b/MeMe/Base.lproj/Main.storyboard
@@ -37,17 +37,20 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-rJ-0Ux">
+                                <rect key="frame" x="0.0" y="70" width="320" height="454"/>
+                            </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="doE-BT-xNg">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="1Fx-KR-9zv"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem systemItem="action" id="sRf-1N-y8a"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="qKD-Zv-rWF"/>
                                     <barButtonItem systemItem="cancel" id="zLC-aW-G9f"/>
                                 </items>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jvj-rJ-0Ux">
-                                <rect key="frame" x="0.0" y="44" width="320" height="480"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -70,6 +73,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="30" y="-33"/>
         </scene>
     </scenes>
 </document>
