--- a/MeMe/Base.lproj/Main.storyboard
+++ b/MeMe/Base.lproj/Main.storyboard
@@ -23,14 +23,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="E1G-ia-8Fz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="24" width="375" height="594"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="myC-Kp-ZAc">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="myC-Kp-ZAc" id="bJT-yp-UcC">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -44,7 +44,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="E1G-ia-8Fz" firstAttribute="leading" secondItem="CWw-ev-DGq" secondAttribute="leading" id="1yc-Oj-DCM"/>
-                            <constraint firstItem="E1G-ia-8Fz" firstAttribute="top" secondItem="scu-2i-DPL" secondAttribute="bottom" id="Hpj-2C-Y8g"/>
+                            <constraint firstItem="E1G-ia-8Fz" firstAttribute="top" secondItem="scu-2i-DPL" secondAttribute="bottom" constant="-40" id="Hpj-2C-Y8g"/>
                             <constraint firstItem="JdU-GA-vyE" firstAttribute="top" secondItem="E1G-ia-8Fz" secondAttribute="bottom" id="Kbj-Mg-BVK"/>
                             <constraint firstAttribute="trailing" secondItem="E1G-ia-8Fz" secondAttribute="trailing" id="Rxx-m6-yTi"/>
                         </constraints>
@@ -70,15 +70,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Fd-e7-QzK">
-                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Fd-e7-QzK">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3h9-Ou-ss9" firstAttribute="top" secondItem="9Fd-e7-QzK" secondAttribute="bottom" id="1j0-g2-cKf"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="9Fd-e7-QzK" secondAttribute="trailing" id="6RH-Bu-Ql8"/>
-                            <constraint firstItem="9Fd-e7-QzK" firstAttribute="leading" secondItem="Cfg-Vh-Xde" secondAttribute="leadingMargin" id="oKy-jW-eCH"/>
+                            <constraint firstItem="9Fd-e7-QzK" firstAttribute="leading" secondItem="Cfg-Vh-Xde" secondAttribute="leading" id="FLF-lk-d0J"/>
+                            <constraint firstAttribute="trailing" secondItem="9Fd-e7-QzK" secondAttribute="trailing" id="W5k-mk-hNW"/>
                             <constraint firstItem="9Fd-e7-QzK" firstAttribute="top" secondItem="XGX-sV-fzS" secondAttribute="bottom" id="tcH-9r-5qX"/>
                         </constraints>
                     </view>
@@ -88,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mKR-U2-NJ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2766" y="-21"/>
+            <point key="canvasLocation" x="2765.5999999999999" y="-21.139430284857571"/>
         </scene>
         <!--Meme Editor View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -194,6 +194,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="s9B-Gi-kOc"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="kX9-AW-rhZ">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
